tests/baselines/reference/AnnotationDeclarationNegative19.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative19.ets(1,1): error TS28026: Annotation cannot be applied for annotation declaration.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative19.ets (1 errors) ====
    @Anno
    ~~~~~
!!! error TS28026: Annotation cannot be applied for annotation declaration.
    @interface Anno {}